--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Gameboy.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Gameboy.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Gameboy.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Gameboy.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #222723, #364b36, #747d36, #abb359)</p>
@@ -734,8 +734,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Raygun.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Raygun.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Raygun.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Raygun.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #000000, #00319f, #d200a5, #ffaa23)</p>
@@ -770,8 +770,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/gradient1.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/gradient1.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Pride.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Pride.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #E40303, #FF8C00, #FFED00, #008026, #004CFF, #732982)</p>
@@ -806,8 +806,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Peach.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Peach.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Peach.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Peach.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #ff7399, #f5f5b8, #6ea900)</p>
@@ -842,8 +842,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Forest.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Forest.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Forest.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Forest.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #172713, #faed8f, #ff3319, #b5d1cc)</p>
@@ -878,8 +878,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Thundercats.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Thundercats.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Thundercats.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Thundercats.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #ffffff, #ffd660, #000000, #ffffff, #00b3ed)</p>
@@ -914,8 +914,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/gradient1.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/gradient1.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Dolls.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Dolls.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #00b3ed, #ff77fd, #ffffff, #ff77fd, #00b3ed)</p>
@@ -950,8 +950,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Sunset.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Sunset.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Sunset.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Sunset.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #b2d0ce, #c6d4c3, #dbd5b3, #c8a386)</p>
@@ -986,8 +986,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Sky.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Sky.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Sky.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Sky.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #5ba8ec, #7df7ff, #c2fcff, #e6ffff, #ffffff)</p>
@@ -1022,8 +1022,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Pop_Art_3.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Pop_Art_3.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Pop Art 3#.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Pop Art 3#.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #000000, #ef4897, #e4ad97, #f0d65b)</p>
@@ -1058,8 +1058,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Pop_Art_2.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Pop_Art_2.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Pop Art 2#.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Pop Art 2#.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #852121, #4f59ba, #8acb5e, #e0d741, #e46b29)</p>
@@ -1094,8 +1094,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Pop_Art_1.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Pop_Art_1.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Pop Art 1#.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Pop Art 1#.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #9de656, #e94693, #e9562f, #71afd2, #276486)</p>
@@ -1130,8 +1130,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Copper.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Copper.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Copper.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Copper.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #de8321, #edcead, #de8321, #ffffff, #de8321)</p>
@@ -1166,8 +1166,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Silver.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Silver.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Silver.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Silver.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #787878, #cfcfcf, #787878, #ffffff, #787878)</p>
@@ -1202,8 +1202,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Gold.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Gold.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Gold.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Gold.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #cfac44, #f8eed0, #cfac44, #ffffff, #cfac44)</p>
@@ -1238,8 +1238,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Sepia.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Sepia.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Sepia.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Sepia.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #342413, #e6cca0)</p>
@@ -1274,8 +1274,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/3D.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/3D.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/3D.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/3D.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #000000, #464646, #dd1e1d, #b7b7b7, #6effff)</p>
@@ -1310,8 +1310,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/X-Ray.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/X-Ray.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/X-Ray.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/X-Ray.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #ffffff, #56c6f4, #000000)</p>
@@ -1346,8 +1346,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Night_Vision.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Night_Vision.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Night Vision.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Night Vision.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #000000, #58df47, #defcda)</p>
@@ -1382,8 +1382,8 @@
             </svg>
             <div class="text">
                 <div>
-                <p><a href="assets/downloads/Thermal_Vision.grd" style="text-decoration: none;">Download .grd</a></p>
-                <!--<p><a href="assets/downloads/Thermal_Vision.grd" style="text-decoration: none;">Download .ggr</a></p>'-->
+                <p><a href="assets/downloads/Thermal Vision.grd" download style="text-decoration: none;">Download .grd</a></p>
+                <p><a href="assets/downloads/Thermal Vision.ggr" download style="text-decoration: none;">Download .ggr</a></p>
                 <details>
                     <summary>Show CSS</summary>
                     <p>linear-gradient(in oklab, #49f14d, #e85c4a, #3643be, #4d1356, #000000)</p>
